[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "data-similarity-analysis"
version = "0.2.0"
description = "Basic and advanced similarity metrics for numerical datasets"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "pandas>=2.0",
]

[project.scripts]
similarity = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
